--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "In-pyo",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "mongoose": "^6.2.3"
   }
